# plot_test

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  after_full_profile.txt  baseline_full_profile.txt  baseline_smoke_profile.txt  current_run.txt  profile_400_deca.txt  profile_400_deca_fixed.txt  profile_400_deca_v2.txt  profile_400_deep.txt  profile_400_optimized.txt  profile_400_revert.txt  profile_400_run.txt  profile_comparison.txt  queue_dump.cpp  run.bat
.cursor/rules/: docs-documentation.mdc  git-safety.mdc  plans-documentation.mdc
app/config/: buildings.yml  config.yml  terrain.txt  terrains.yml  town.yml
app/core/: App.cpp  App.h  BorderFrontier.cpp  BorderFrontier.h  BorderPlacement.cpp  BorderPlacement.h  BuildingGrowthQueue.cpp  BuildingGrowthQueue.h  BuildingLayout.cpp  BuildingLayout.h  BuildingPlacer.cpp  BuildingPlacer.h  BuildingTypes.h  Camera.cpp  Camera.h  CellSubdivision.cpp  CellSubdivision.h  Config.cpp  Config.h  DefCache.cpp  DefCache.h  FrontageGapFill.cpp  FrontageGapFill.h  FrontagePlacement.cpp  FrontagePlacement.h  FrontageZones.cpp  FrontageZones.h  FrontierManager.cpp  FrontierManager.h  GrowthRings.cpp  GrowthRings.h  Hud.cpp  Hud.h  Logger.cpp  Logger.h  MemoryReport.cpp  MemoryReport.h  MovableRelocation.cpp  MovableRelocation.h  PlacementFloors.cpp  (+43 more)
app/core/common/: Geometry.cpp  Geometry.h  RenderPrimitives.cpp  RenderPrimitives.h  Vec2.h
app/core/config/: Config.cpp  Config.h  DefCache.cpp  DefCache.h  TownConfig.cpp  YamlUtil.cpp  YamlUtil.h
app/core/generation/: TownBuilder.cpp  TownBuilder.h
app/core/placement/frontage/: FrontageGapFill.cpp  FrontageGapFill.h  FrontagePlacement.cpp  FrontagePlacement.h
app/core/placement/frontier/: BorderFrontier.cpp  BorderFrontier.h  FrontierManager.cpp  FrontierManager.h  FrontierSlotUtils.cpp  FrontierSlotUtils.h  PlacementFrontier.cpp  PlacementFrontier.h  TerrainScanFrontier.cpp  TerrainScanFrontier.h
app/core/placement/geometry/: BuildingLayout.cpp  BuildingLayout.h  PlotDimensions.cpp  PlotDimensions.h  PlotGeometry.cpp  PlotGeometry.h
app/core/placement/logging/: PlacementLogging.cpp  PlacementLogging.h  TerrainPlacementLogging.cpp  TerrainPlacementLogging.h
app/core/placement/orchestration/: BuildingGrowthQueue.cpp  BuildingGrowthQueue.h  BuildingPlacer.cpp  BuildingPlacer.h  GrowthRings.cpp  GrowthRings.h  MovableRelocation.cpp  MovableRelocation.h  PlacementFloors.cpp  PlacementFloors.h  PlacementPrep.cpp  PlacementPrep.h
app/core/placement/terrain/: BorderPlacement.cpp  BorderPlacement.h  TerrainPlacement.cpp  TerrainPlacement.h
app/core/placement/zones/: FrontageZones.cpp  FrontageZones.h
app/core/render/: App.cpp  App.h  Camera.cpp  Hud.cpp  Hud.h
app/core/roads/: BridgeResolve.cpp  CorridorCull.cpp  RoadDedup.cpp  RoadExhaustion.cpp  RoadExhaustion.h  RoadIntersectionSplit.cpp  RoadNetwork.cpp  RoadNetwork.h  RoadNetworkInternal.h  SecondaryRoadPlacement.cpp  SecondaryRoadPlacement.h  WaterSanitize.cpp
app/core/terrain/: Terrain.h  TerrainAtlas.h  TerrainBake.cpp  TerrainCatalog.cpp  TerrainCatalog.h  TerrainColors.cpp  TerrainColors.h
app/core/town/: Town.cpp  Town.h  TownBridgeBuckets.cpp  TownCarving.cpp  TownFrontage.cpp  TownInternal.h  TownJunctions.cpp  TownMeshes.cpp  TownSecondary.cpp
app/core/util/: Logger.cpp  Logger.h  MemoryReport.cpp  Profile.cpp
docs/: README.md
docs/app/: rendering-and-debug.md
docs/architecture/: constraints.md  data-model.md  overview.md
docs/config/: reference.md
docs/growth/: queue-and-controls.md
docs/placement/: alleys-and-gap-fill.md  frontage-and-plots.md  frontiers.md  rules.md  sync-pipeline.md  terrain-buildings.md  zones-and-rings.md
docs/town-generation/: road-graph.md  water-and-bridges.md
docs/town-generation/terrain/: bake-and-atlas.md  corridors.md  overview.md  queries.md
logs/: memory.md
plans/: README.md  placement-model.md  road-only-model.md  terrain-bake-pipeline.md  terrain-bridges.md  terrain-corridor-roads.md  terrain-data-model.md  terrain-placement.md  terrain-roadmap.md  terrain-step1-implementation.md  terrain-system.md
scripts/: fix_deca_revert_corruptions.py  revert_deca.py
tools/: split_building_placer.py
